first working version

--- a/.gitignore
+++ b/.gitignore
@@ -30,5 +30,5 @@ __pycache__/
 
 # c# extensions
 
-A3A/extensions/*/obj/*
-A3A/extensions/*/bin/*
+A3A/extensions/dcpr/obj/*
+A3A/extensions/dcpr/bin/*
